{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 15,
  "lineage": "fedae9f7-f426-9919-57fb-cbfc3924fa6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:953710635619:internet-gateway/igw-0e79b6164f8df6779",
            "id": "igw-0e79b6164f8df6779",
            "owner_id": "953710635619",
            "vpc_id": "vpc-082be16c5edcfe1b5"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prod_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e79b6164f8df6779",
            "id": "r-rtb-043855eb649e7cf431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-043855eb649e7cf43",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod",
            "aws_route_table.prod_public",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prod_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:953710635619:route-table/rtb-06a660529c3c7de23",
            "id": "rtb-06a660529c3c7de23",
            "owner_id": "953710635619",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082be16c5edcfe1b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:953710635619:route-table/rtb-043855eb649e7cf43",
            "id": "rtb-043855eb649e7cf43",
            "owner_id": "953710635619",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082be16c5edcfe1b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072f64add8832e3f4",
            "route_table_id": "rtb-06a660529c3c7de23",
            "subnet_id": "subnet-01420db3bee72dd1c"
          },
          "dependencies": [
            "aws_route_table.prod_private",
            "aws_subnet.prod_private_1",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c28d98aafbad4b61",
            "route_table_id": "rtb-06a660529c3c7de23",
            "subnet_id": "subnet-036a1fcc4d2a29e97"
          },
          "dependencies": [
            "aws_route_table.prod_private",
            "aws_subnet.prod_private_2",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce50aa3521af7851",
            "route_table_id": "rtb-043855eb649e7cf43",
            "subnet_id": "subnet-0f0efa5ad9978c040"
          },
          "dependencies": [
            "aws_route_table.prod_public",
            "aws_subnet.prod_public_1",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006747b405c330120",
            "route_table_id": "rtb-043855eb649e7cf43",
            "subnet_id": "subnet-023175bbef0ef2f76"
          },
          "dependencies": [
            "aws_route_table.prod_public",
            "aws_subnet.prod_public_2",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:953710635619:subnet/subnet-01420db3bee72dd1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01420db3bee72dd1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953710635619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-1"
            },
            "tags_all": {
              "Name": "prod-private-1"
            },
            "vpc_id": "vpc-082be16c5edcfe1b5"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:953710635619:subnet/subnet-036a1fcc4d2a29e97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036a1fcc4d2a29e97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953710635619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-2"
            },
            "tags_all": {
              "Name": "prod-private-2"
            },
            "vpc_id": "vpc-082be16c5edcfe1b5"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:953710635619:subnet/subnet-0f0efa5ad9978c040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0efa5ad9978c040",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953710635619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-1"
            },
            "tags_all": {
              "Name": "prod-public-1"
            },
            "vpc_id": "vpc-082be16c5edcfe1b5"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:953710635619:subnet/subnet-023175bbef0ef2f76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023175bbef0ef2f76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953710635619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-2"
            },
            "tags_all": {
              "Name": "prod-public-2"
            },
            "vpc_id": "vpc-082be16c5edcfe1b5"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:953710635619:vpc/vpc-082be16c5edcfe1b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e06d29903fdcb54",
            "default_route_table_id": "rtb-054d1dd418c81d77f",
            "default_security_group_id": "sg-0ce57926c6048805d",
            "dhcp_options_id": "dopt-016d4ecd01530ea5e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-082be16c5edcfe1b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054d1dd418c81d77f",
            "owner_id": "953710635619"
          }
        }
      ]
    }
  ]
}